# yabplot

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  create_nifti2gii.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.py
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
docs/assets/: custom.css
docs/reference/: plotting.md  utils.md
docs/tutorials/: custom_cortical_atlas.ipynb  custom_subcortical_atlas.ipynb  data_mapping.ipynb  plot_styling.ipynb
examples/: custom_subcortical_atlas.ipynb
reference/plotting/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_smoke.py
tutorials/custom_cortical_atlas/: index.html
tutorials/custom_subcortical_atlas/: index.html
tutorials/data_mapping/: index.html
tutorials/getting_started/: index.html
tutorials/plot_styling/: index.html
yabplot/: __init__.py  plotting.py  plotting_OLD.py  scene.py  utils.py
yabplot/data/: __init__.py  registry.txt
yabplot/resources/desikan/pv/: L_Banks_superior_temporal_sulcus.vtk  L_caudal_anterior_cingulate_cortex.vtk  L_caudal_middle_frontal_gyrus.vtk  L_corpus_calosum.vtk  L_cuneus_cortex.vtk  L_entorhinal_cortex.vtk  L_frontal_pole.vtk  L_fusiform_gyrus.vtk  L_inferior_parietal_cortex.vtk  L_inferior_temporal_gyrus.vtk  L_isthmus-cingulate_cortex.vtk  L_lateral_occipital_cortex.vtk  L_lateral_orbitofrontal_cortex.vtk  L_lingual_gyrus.vtk  L_medial_orbitofrontal_cortex.vtk  L_middle_temporal_gyrus.vtk  L_paracentral_lobule.vtk  L_parahippocampal_gyrus.vtk  L_pars_opercularis.vtk  L_pars_orbitalis.vtk  L_pars_triangularis.vtk  L_pericalcarine_cortex.vtk  L_postcentral_gyrus.vtk  L_posterior-cingulate_cortex.vtk  L_precentral_gyrus.vtk  L_precuneus_cortex.vtk  L_rostral_anterior_cingulate_cortex.vtk  L_temporal_pole.vtk  (+42 more)
yabplot/resources/musus100_dbn/: DBN.txt
(+723 files in other folders)
