[project]
name = "yabplot"
version = "0.1.0"
description = "yet another brain plot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "nibabel>=5.3.2",
    "pandas>=2.3.3",
    "pooch>=1.8.2",
    "pyvista>=0.46.4",
    "scikit-image>=0.25.2",
    "trame>=3.12.0",
    "trame-vtk>=2.10.0",
    "trame-vuetify>=3.1.0",
]

[project.optional-dependencies]
    docs = [
      "mkdocs",
      "mkdocs-jupyter>=0.25.1",
      "mkdocs-material",
      "mkdocstrings[python]",
]
